--- a/config/sync/core.entity_form_display.paragraph.class_packages.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.class_packages.default.yml
@@ -7,10 +7,12 @@ dependencies:
     - field.field.paragraph.class_packages.field_background_image
     - field.field.paragraph.class_packages.field_heading
     - field.field.paragraph.class_packages.field_paragraph_view_reference
+    - field.field.paragraph.class_packages.field_slots_classes
     - image.style.thumbnail
     - paragraphs.paragraphs_type.class_packages
   module:
     - image
+    - paragraphs
     - viewsreference
     - workbench_moderation
 id: paragraph.class_packages.default
@@ -45,6 +47,17 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: viewsreference_autocomplete
+  field_slots_classes:
+    type: entity_reference_paragraphs
+    weight: 10
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+    third_party_settings: {  }
 hidden:
   created: true
   status: true
