--- a/config/sync/core.entity_form_display.taxonomy_term.vih_class.default.yml
+++ b/config/sync/core.entity_form_display.taxonomy_term.vih_class.default.yml
@@ -4,12 +4,12 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
+    - field.field.taxonomy_term.vih_class.field_related_teachers
     - field.field.taxonomy_term.vih_class.field_vih_class_class_packages
     - field.field.taxonomy_term.vih_class.field_vih_class_color
     - field.field.taxonomy_term.vih_class.field_vih_class_image
     - field.field.taxonomy_term.vih_class.field_vih_class_material_price
     - field.field.taxonomy_term.vih_class.field_vih_class_price_addition
-    - field.field.taxonomy_term.vih_class.field_vih_class_teacher
     - taxonomy.vocabulary.vih_class
   module:
     - entity_browser
@@ -27,6 +27,14 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+  field_related_teachers:
+    weight: 36
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
   field_vih_class_class_packages:
     weight: 32
     settings:
@@ -66,14 +74,6 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: number
-  field_vih_class_teacher:
-    weight: 36
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: entity_reference_autocomplete
   langcode:
     type: language_select
     weight: 2
