--- a/config/sync/core.entity_form_display.node.news.default.yml
+++ b/config/sync/core.entity_form_display.node.news.default.yml
@@ -6,7 +6,7 @@ dependencies:
     - entity_browser.browser.image_browser
     - field.field.node.news.body
     - field.field.node.news.field_image
-    - field.field.node.news.field_news_category
+    - field.field.node.news.field_news_tags
     - node.type.news
   module:
     - entity_browser
@@ -43,7 +43,7 @@ content:
       open: true
       selection_mode: selection_append
     third_party_settings: {  }
-  field_news_category:
+  field_news_tags:
     weight: 33
     settings:
       match_operator: CONTAINS
