--- a/config/sync/core.entity_form_display.paragraph.vih_teacher_class_description.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.vih_teacher_class_description.default.yml
@@ -1,12 +1,12 @@
-uuid: b2650dcf-48e5-47ef-95d0-3620a3502943
+uuid: 5ed8beed-0a42-4015-b5e2-75ff1b60bb98
 langcode: da
 status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
-    - field.field.paragraph.vih_teacher_class_description.field_vih_tcd_description
-    - field.field.paragraph.vih_teacher_class_description.field_vih_tcd_image
-    - field.field.paragraph.vih_teacher_class_description.field_vih_tcd_title
+    - field.field.paragraph.vih_teacher_class_description.field_description
+    - field.field.paragraph.vih_teacher_class_description.field_heading
+    - field.field.paragraph.vih_teacher_class_description.field_photo
     - paragraphs.paragraphs_type.vih_teacher_class_description
   module:
     - entity_browser
@@ -17,14 +17,21 @@ targetEntityType: paragraph
 bundle: vih_teacher_class_description
 mode: default
 content:
-  field_vih_tcd_description:
+  field_description:
     weight: 8
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
     type: text_textarea
-  field_vih_tcd_image:
+  field_heading:
+    weight: 6
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+  field_photo:
     type: entity_browser_file
     weight: 7
     settings:
@@ -36,13 +43,6 @@ content:
       open: true
       selection_mode: selection_append
     third_party_settings: {  }
-  field_vih_tcd_title:
-    weight: 6
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
 hidden:
   created: true
   status: true
