--- a/config/sync/core.entity_form_display.user.user.default.yml
+++ b/config/sync/core.entity_form_display.user.user.default.yml
@@ -5,11 +5,10 @@ dependencies:
   config:
     - entity_browser.browser.image_browser
     - field.field.user.user.field_user_birthday
-    - field.field.user.user.field_user_description
+    - field.field.user.user.field_user_class_description
     - field.field.user.user.field_user_name_first
     - field.field.user.user.field_user_name_last
     - field.field.user.user.field_user_qualifications
-    - field.field.user.user.field_user_teacher_class_desc
     - field.field.user.user.field_vih_user_about
     - field.field.user.user.field_vih_user_phone
     - field.field.user.user.field_vih_user_photo
@@ -26,42 +25,21 @@ bundle: user
 mode: default
 content:
   account:
-    weight: 0
-    settings: {  }
-    third_party_settings: {  }
-  contact:
     weight: 9
     settings: {  }
     third_party_settings: {  }
+  contact:
+    weight: 10
+    settings: {  }
+    third_party_settings: {  }
   field_user_birthday:
-    weight: 3
+    weight: 2
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
-  field_user_description:
-    weight: 11
-    settings:
-      rows: 5
-      placeholder: ''
-    third_party_settings: {  }
-    type: text_textarea
-  field_user_name_first:
-    weight: 1
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-  field_user_name_last:
-    weight: 2
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-  field_user_qualifications:
+  field_user_class_description:
     type: entity_reference_paragraphs
-    weight: 13
+    weight: 7
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -70,9 +48,23 @@ content:
       form_display_mode: default
       default_paragraph_type: ''
     third_party_settings: {  }
-  field_user_teacher_class_desc:
+  field_user_name_first:
+    weight: 0
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+  field_user_name_last:
+    weight: 1
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+  field_user_qualifications:
     type: entity_reference_paragraphs
-    weight: 14
+    weight: 6
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -89,7 +81,7 @@ content:
     third_party_settings: {  }
     type: text_textfield
   field_vih_user_phone:
-    weight: 4
+    weight: 3
     settings:
       size: 60
       placeholder: ''
@@ -97,7 +89,7 @@ content:
     type: string_textfield
   field_vih_user_photo:
     type: entity_browser_file
-    weight: 6
+    weight: 8
     settings:
       entity_browser: image_browser
       field_widget_edit: true
@@ -108,19 +100,13 @@ content:
       selection_mode: selection_append
     third_party_settings: {  }
   field_vih_user_title:
-    weight: 7
+    weight: 4
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
-  language:
-    weight: 8
-    settings: {  }
-    third_party_settings: {  }
-  timezone:
-    weight: 10
-    settings: {  }
-    third_party_settings: {  }
 hidden:
   langcode: true
+  language: true
+  timezone: true
