--- a/config/sync/core.entity_view_display.node.news.default.yml
+++ b/config/sync/core.entity_view_display.node.news.default.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - field.field.node.news.body
     - field.field.node.news.field_image
-    - field.field.node.news.field_news_category
+    - field.field.node.news.field_news_tags
     - node.type.news
   module:
     - image
@@ -30,7 +30,7 @@ content:
       image_link: ''
     third_party_settings: {  }
     type: image
-  field_news_category:
+  field_news_tags:
     weight: 103
     label: above
     settings:
