--- a/config/sync/core.entity_view_display.paragraph.class_packages.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.class_packages.default.yml
@@ -7,8 +7,10 @@ dependencies:
     - field.field.paragraph.class_packages.field_background_image
     - field.field.paragraph.class_packages.field_heading
     - field.field.paragraph.class_packages.field_paragraph_view_reference
+    - field.field.paragraph.class_packages.field_slots_classes
     - paragraphs.paragraphs_type.class_packages
   module:
+    - entity_reference_revisions
     - image
     - viewsreference
 id: paragraph.class_packages.default
@@ -39,5 +41,13 @@ content:
         - block
     third_party_settings: {  }
     type: viewsreference_formatter
+  field_slots_classes:
+    type: entity_reference_revisions_entity_view
+    weight: 4
+    label: above
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
 hidden:
   field_background_color: true
