--- a/config/sync/core.entity_view_display.paragraph.vih_teacher_class_description.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.vih_teacher_class_description.default.yml
@@ -1,11 +1,11 @@
-uuid: 037c5831-9743-479f-888a-86761cb3e600
+uuid: 3c9bdadb-201f-49f3-9db6-5a70dcbbc436
 langcode: da
 status: true
 dependencies:
   config:
-    - field.field.paragraph.vih_teacher_class_description.field_vih_tcd_description
-    - field.field.paragraph.vih_teacher_class_description.field_vih_tcd_image
-    - field.field.paragraph.vih_teacher_class_description.field_vih_tcd_title
+    - field.field.paragraph.vih_teacher_class_description.field_description
+    - field.field.paragraph.vih_teacher_class_description.field_heading
+    - field.field.paragraph.vih_teacher_class_description.field_photo
     - paragraphs.paragraphs_type.vih_teacher_class_description
   module:
     - image
@@ -15,13 +15,20 @@ targetEntityType: paragraph
 bundle: vih_teacher_class_description
 mode: default
 content:
-  field_vih_tcd_description:
+  field_description:
     weight: 2
     label: above
     settings: {  }
     third_party_settings: {  }
     type: text_default
-  field_vih_tcd_image:
+  field_heading:
+    weight: 0
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+  field_photo:
     weight: 1
     label: above
     settings:
@@ -29,11 +36,4 @@ content:
       image_link: ''
     third_party_settings: {  }
     type: image
-  field_vih_tcd_title:
-    weight: 0
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
 hidden: {  }
