--- a/config/sync/field.field.paragraph.vih_teacher_class_description.field_description.yml
+++ b/config/sync/field.field.paragraph.vih_teacher_class_description.field_description.yml
@@ -1,20 +1,20 @@
-uuid: c201417d-a194-4e59-ac6b-0ccca0e874f6
+uuid: dd7fe1a6-e6ca-4bff-aa6b-bd56befa64a0
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_vih_tcd_description
+    - field.storage.paragraph.field_description
     - paragraphs.paragraphs_type.vih_teacher_class_description
   module:
     - text
-id: paragraph.vih_teacher_class_description.field_vih_tcd_description
-field_name: field_vih_tcd_description
+id: paragraph.vih_teacher_class_description.field_description
+field_name: field_description
 entity_type: paragraph
 bundle: vih_teacher_class_description
-label: Description
+label: Beskrivelse
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
