--- a/config/sync/field.storage.node.field_news_tags.yml
+++ b/config/sync/field.storage.node.field_news_tags.yml
@@ -1,13 +1,13 @@
-uuid: 3a2d98fe-b098-4d33-824f-0bd5809500d3
+uuid: 093f1f21-350d-44bc-b816-ef618143e6ba
 langcode: da
 status: true
 dependencies:
   module:
-    - paragraphs
+    - node
     - taxonomy
-id: paragraph.field_csac_classes
-field_name: field_csac_classes
-entity_type: paragraph
+id: node.field_news_tags
+field_name: field_news_tags
+entity_type: node
 type: entity_reference
 settings:
   target_type: taxonomy_term
