--- a/config/sync/field.storage.paragraph.field_photo.yml
+++ b/config/sync/field.storage.paragraph.field_photo.yml
@@ -1,4 +1,4 @@
-uuid: 9e94b43f-aceb-41d2-a09b-4f5357359ee0
+uuid: c9eefa84-865b-4a82-94f4-04839b33fe3f
 langcode: da
 status: true
 dependencies:
@@ -6,8 +6,8 @@ dependencies:
     - file
     - image
     - paragraphs
-id: paragraph.field_vih_tcd_image
-field_name: field_vih_tcd_image
+id: paragraph.field_photo
+field_name: field_photo
 entity_type: paragraph
 type: image
 settings:
