--- a/config/sync/field.storage.paragraph.field_related_class.yml
+++ b/config/sync/field.storage.paragraph.field_related_class.yml
@@ -1,20 +1,19 @@
-uuid: 453aacf1-7f3f-4008-9416-059d9983dd29
+uuid: 942b10a2-1844-4735-886c-80bda812e866
 langcode: da
 status: true
 dependencies:
   module:
     - paragraphs
-id: paragraph.field_vih_tcd_title
-field_name: field_vih_tcd_title
+    - taxonomy
+id: paragraph.field_related_class
+field_name: field_related_class
 entity_type: paragraph
-type: string
+type: entity_reference
 settings:
-  max_length: 255
-  is_ascii: false
-  case_sensitive: false
+  target_type: taxonomy_term
 module: core
 locked: false
-cardinality: 1
+cardinality: -1
 translatable: true
 indexes: {  }
 persist_with_no_fields: false
