Config export Config export Please enter the commit message for your changes. Lines starting

--- a/config/sync/core.entity_view_display.paragraph.vih_related_classes.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.vih_related_classes.default.yml
@@ -13,14 +13,14 @@ mode: default
 content:
   field_heading:
     weight: 0
-    label: above
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
     type: string
   field_related_class:
     weight: 1
-    label: above
+    label: hidden
     settings:
       link: true
     third_party_settings: {  }
