--- a/config/sync/core.entity_view_display.paragraph.vih_teacher_class_description.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.vih_teacher_class_description.default.yml
@@ -23,14 +23,14 @@ content:
     type: text_default
   field_heading:
     weight: 0
-    label: above
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
     type: string
   field_photo:
     weight: 1
-    label: above
+    label: hidden
     settings:
       image_style: ''
       image_link: ''
