--- a/config/sync/core.entity_view_display.paragraph.vih_qualifications.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.vih_qualifications.default.yml
@@ -12,7 +12,7 @@ mode: default
 content:
   field_qualifications_description:
     weight: 0
-    label: above
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
