--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class.default.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class.default.yml
@@ -11,7 +11,6 @@ dependencies:
     - field.field.taxonomy_term.vih_class.field_vih_class_price_addition
     - taxonomy.vocabulary.vih_class
   module:
-    - image
     - text
 id: taxonomy_term.vih_class.default
 targetEntityType: taxonomy_term
@@ -31,13 +30,6 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
-  field_vih_class_class_packages:
-    weight: 2
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
   field_vih_class_color:
     weight: 4
     label: above
@@ -45,14 +37,6 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
-  field_vih_class_image:
-    weight: 5
-    label: above
-    settings:
-      image_style: ''
-      image_link: ''
-    third_party_settings: {  }
-    type: image
   field_vih_class_material_price:
     weight: 3
     label: above
@@ -74,4 +58,6 @@ content:
     third_party_settings: {  }
     type: number_decimal
 hidden:
+  field_vih_class_class_packages: true
+  field_vih_class_image: true
   langcode: true
