--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class_package.default.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class_package.default.yml
@@ -3,11 +3,13 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.taxonomy_term.vih_class_package.field_p_related_classes
     - field.field.taxonomy_term.vih_class_package.field_vih_cp_description
     - field.field.taxonomy_term.vih_class_package.field_vih_cp_image
     - field.field.taxonomy_term.vih_class_package.field_vih_cp_subtitle
     - taxonomy.vocabulary.vih_class_package
   module:
+    - entity_reference_revisions
     - text
 id: taxonomy_term.vih_class_package.default
 targetEntityType: taxonomy_term
@@ -19,6 +21,14 @@ content:
     type: text_default
     weight: 1
     settings: {  }
+    third_party_settings: {  }
+  field_p_related_classes:
+    type: entity_reference_revisions_entity_view
+    weight: 2
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
     third_party_settings: {  }
   field_vih_cp_subtitle:
     weight: 0
