--- a/config/sync/core.entity_view_display.user.user.default.yml
+++ b/config/sync/core.entity_view_display.user.user.default.yml
@@ -34,7 +34,7 @@ content:
   field_user_class_description:
     type: entity_reference_revisions_entity_view
     weight: 16
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
@@ -91,5 +91,7 @@ content:
     type: string
   member_for:
     weight: 5
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   langcode: true
