--- a/config/sync/core.entity_form_display.taxonomy_term.vih_class.default.yml
+++ b/config/sync/core.entity_form_display.taxonomy_term.vih_class.default.yml
@@ -44,12 +44,10 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
   field_vih_class_color:
-    weight: 34
-    settings:
-      size: 60
-      placeholder: ''
+    weight: 37
+    settings: {  }
     third_party_settings: {  }
-    type: string_textfield
+    type: options_select
   field_vih_class_image:
     type: entity_browser_file
     weight: 35
