--- a/config/sync/field.field.taxonomy_term.vih_class.field_vih_class_color.yml
+++ b/config/sync/field.field.taxonomy_term.vih_class.field_vih_class_color.yml
@@ -1,19 +1,23 @@
-uuid: b6a0c25a-b8e0-47c8-a21e-f7656adf95a5
+uuid: c3341a64-6ec9-4aac-8e73-a16ad1dc4800
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.taxonomy_term.field_vih_class_color
     - taxonomy.vocabulary.vih_class
+  module:
+    - options
 id: taxonomy_term.vih_class.field_vih_class_color
 field_name: field_vih_class_color
 entity_type: taxonomy_term
 bundle: vih_class
-label: 'Color class'
+label: 'Class color'
 description: ''
 required: false
 translatable: false
-default_value: {  }
+default_value:
+  -
+    value: color-red
 default_value_callback: ''
 settings: {  }
-field_type: string
+field_type: list_string
