Modules added and changed

--- a/docroot/modules/custom/vih_subscription/vih_subscription.routing.yml
+++ b/docroot/modules/custom/vih_subscription/vih_subscription.routing.yml
@@ -1,5 +1,5 @@
 vih_subscription.long_course_order_create:
-  path: '/langekurser/{course}/tilmelding'
+  path: 'langeophold/{course}/tilmelding'
   options:
     parameters:
       course:
